--- a/pygCode/pinyougou-parent/pinyougou-manager-web/pom.xml
+++ b/pygCode/pinyougou-parent/pinyougou-manager-web/pom.xml
@@ -79,6 +79,17 @@
 	</dependency>
 
 
+   		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			
+		</dependency>
+
 	<dependency>
 		<groupId>com.pinyougou</groupId>
 		<artifactId>pinyougou-sellergoods-interface</artifactId>
