--- a/pygCode/pinyougou-parent/pinyougou-shop-web/pom.xml
+++ b/pygCode/pinyougou-parent/pinyougou-shop-web/pom.xml
@@ -88,11 +88,19 @@
 			<artifactId>spring-security-config</artifactId>
 
 		</dependency>
+		
+
+		
 
 
 		<dependency>
 			<groupId>com.pinyougou</groupId>
 			<artifactId>pinyougou-sellergoods-interface</artifactId>
+			<version>0.0.5-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.pinyougou</groupId>
+			<artifactId>pinyougou-common</artifactId>
 			<version>0.0.5-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
