--- a/pygCode/pinyougou-parent/pinyougou-search-service/pom.xml
+++ b/pygCode/pinyougou-parent/pinyougou-search-service/pom.xml
@@ -87,6 +87,11 @@
 		<artifactId>pinyougou-search-interface</artifactId>
 		<version>0.0.5-SNAPSHOT</version>
 	</dependency>
+	<dependency>
+		<groupId>com.pinyougou</groupId>
+		<artifactId>pinyougou-common</artifactId>
+		<version>0.0.5-SNAPSHOT</version>
+	</dependency>
   </dependencies>
   
   
