--- a/pygCode/pinyougou-parent/pinyougou-sellergoods-service/pom.xml
+++ b/pygCode/pinyougou-parent/pinyougou-sellergoods-service/pom.xml
@@ -89,6 +89,11 @@
 		<artifactId>pinyougou-dao</artifactId>
 		<version>0.0.5-SNAPSHOT</version>
 	</dependency>
+	<dependency>
+		<groupId>com.pinyougou</groupId>
+		<artifactId>pinyougou-common</artifactId>
+		<version>0.0.5-SNAPSHOT</version>
+	</dependency>
   </dependencies>
   
   <build>  
