--- a/pygCode/pinyougou-parent/pinyougou-common/src/main/resources/properties/redis-config.properties
+++ b/pygCode/pinyougou-parent/pinyougou-common/src/main/resources/properties/redis-config.properties
@@ -1,6 +1,7 @@
 # Redis settings 
 # server IP 
-redis.host=47.93.37.94
+#redis.host=47.93.37.94
+redis.host=127.0.0.1
 # server port 
 redis.port=6379 
 # server pass 
