--- a/pygCode/pinyougou-parent/pom.xml
+++ b/pygCode/pinyougou-parent/pom.xml
@@ -291,5 +291,6 @@
 		<module>pinyougou-search-web</module>
 		<module>pinyougou-page-interface</module>
 		<module>pinyougou-page-service</module>
+		<module>pinyougou-page-web</module>
 	</modules>
 </project>
