--- a/pygCode/pinyougou-parent/pinyougou-manager-web/pom.xml
+++ b/pygCode/pinyougou-parent/pinyougou-manager-web/pom.xml
@@ -87,8 +87,14 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
-			
 		</dependency>
+		
+		<dependency>
+		<groupId>org.apache.activemq</groupId>
+		<artifactId>activemq-client</artifactId>
+		<version>5.13.4</version>
+	 </dependency>
+		
 
 	<dependency>
 		<groupId>com.pinyougou</groupId>
@@ -103,16 +109,6 @@
 	<dependency>
 		<groupId>com.pinyougou</groupId>
 		<artifactId>pinyougou-common</artifactId>
-		<version>0.0.5-SNAPSHOT</version>
-	</dependency>
-	<dependency>
-		<groupId>com.pinyougou</groupId>
-		<artifactId>pinyougou-search-interface</artifactId>
-		<version>0.0.5-SNAPSHOT</version>
-	</dependency>
-	<dependency>
-		<groupId>com.pinyougou</groupId>
-		<artifactId>pinyougou-page-interface</artifactId>
 		<version>0.0.5-SNAPSHOT</version>
 	</dependency>
    </dependencies>
