--- a/pygCode/pinyougou-parent/pinyougou-search-service/pom.xml
+++ b/pygCode/pinyougou-parent/pinyougou-search-service/pom.xml
@@ -33,6 +33,11 @@
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-jms</artifactId>		
 	</dependency>
+		<dependency>
+		<groupId>org.apache.activemq</groupId>
+		<artifactId>activemq-client</artifactId>
+		<version>5.13.4</version>
+	 </dependency>
 	<dependency>
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-context-support</artifactId>		
