--- a/pygCode/pinyougou-parent/pinyougou-dao/src/main/resources/properties/db.properties
+++ b/pygCode/pinyougou-parent/pinyougou-dao/src/main/resources/properties/db.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/pinyougoudb?characterEncoding=utf-8
+jdbc.url=jdbc:mysql://47.93.37.94:3306/pinyougoudb?characterEncoding=utf-8
 jdbc.username=root
-jdbc.password=
+jdbc.password=Wzq5517992@
