第十八章微信支付开发完成

--- a/pygCode/pinyougou-parent/pinyougou-common/pom.xml
+++ b/pygCode/pinyougou-parent/pinyougou-common/pom.xml
@@ -34,6 +34,13 @@
 		<artifactId>servlet-api</artifactId>
 		<scope>provided</scope>
 	</dependency>
+	
+	     <!-- httpclient-->
+	  	<dependency>
+  		<groupId>org.apache.httpcomponents</groupId>
+  		<artifactId>httpclient</artifactId>	  		
+	  	</dependency>
+	
 			
 
 		
