--- a/pygCode/pinyougou-parent/pinyougou-cart-web/pom.xml
+++ b/pygCode/pinyougou-parent/pinyougou-cart-web/pom.xml
@@ -131,6 +131,17 @@
 		<artifactId>pinyougou-order-interface</artifactId>
 		<version>0.0.5-SNAPSHOT</version>
 	</dependency>
+	<dependency>
+		<groupId>com.pinyougou</groupId>
+		<artifactId>pinyougou-pay-service</artifactId>
+		<version>0.0.5-SNAPSHOT</version>
+		<type>war</type>
+	</dependency>
+	<dependency>
+		<groupId>com.pinyougou</groupId>
+		<artifactId>pinyougou-pay-interface</artifactId>
+		<version>0.0.5-SNAPSHOT</version>
+	</dependency>
   </dependencies>
    
   
