--- a/pygCode/pinyougou-parent/pinyougou-page-web/pom.xml
+++ b/pygCode/pinyougou-parent/pinyougou-page-web/pom.xml
@@ -9,7 +9,34 @@
   <packaging>war</packaging>
   
   
-    <build>  
+  <properties>
+  	<port>9105</port>
+  </properties>
+  
+  <profiles>
+  	<profile>
+  		<id>dev</id>
+  		<properties>
+  			<port>9105</port>
+  		</properties>
+  	</profile>
+  	<profile>
+  		<id>pro</id>
+  		<properties>
+  			<port>9205</port>
+  		</properties>
+  	</profile>
+  	  	<profile>
+  		<id>release</id>
+  		<properties>
+  			<port>9305</port>
+  		</properties>
+  	</profile>
+  
+  </profiles>
+  
+  
+  <build>  
 	  <plugins>	     
 	      <plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
@@ -17,7 +44,7 @@
 				<version>2.2</version>
 				<configuration>
 					<!-- 指定端口 -->
-					<port>9105</port>
+					<port>${port}</port>
 					<!-- 请求路径 -->
 					<path>/</path>
 				</configuration>
