--- a/pygCode/pinyougou-parent/pinyougou-common/pom.xml
+++ b/pygCode/pinyougou-parent/pinyougou-common/pom.xml
@@ -7,6 +7,26 @@
   </parent>
   <artifactId>pinyougou-common</artifactId>
   
+    <properties>
+  	  <env>dev</env>
+  </properties>
+  
+  <profiles>
+  	<profile>
+  		<id>dev</id>
+	  	<properties>
+	  	   <env>dev</env>
+	  	</properties>
+  	</profile>
+  	<profile>
+  		<id>pro</id>
+	  	<properties>
+	  	   <env>pro</env>
+	  	</properties>
+  	</profile>
+  </profiles>
+  
+  
   <dependencies>
   		<!-- 文件上传组件 -->
 		<dependency>
@@ -39,10 +59,22 @@
 	  	<dependency>
   		<groupId>org.apache.httpcomponents</groupId>
   		<artifactId>httpclient</artifactId>	  		
-	  	</dependency>
-	
-			
+	  	</dependency>	
+	  	
+	  	
+	  	
 
-		
   </dependencies>
+  
+    <build>
+  	<filters>
+  		<filter>src/main/resources/filters/dubbox_${env}.properties</filter>
+  	</filters>
+    <resources>
+    	<resource>
+    		<directory>src/main/resources</directory>
+    		<filtering>true</filtering>
+    	</resource>    
+    </resources>  
+  </build>
 </project>
